--- a/content/发布服务部署记录.md
+++ b/content/发布服务部署记录.md
@@ -4,8 +4,7 @@ date: 2023-05-11
 lastmod: 2023-05-18 12:02:56
 tags:
 - Obsidian
-date created: "2023-05-11"
-date modified: "2023-05-17"
+- fabu
 ---
 
 ## 发布相关信息源
